--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                     <div class="box">
-                        <a href="">
+                        <a href="https://drive.google.com/drive/folders/1fUSmVnghx_rdNv2BXfaTcE4M-h3TlyGO?usp=sharing">
                             <img src="./assets/extensions.png" alt="">
                         </a>
                     </div>
